--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "click==8.3.0",
     "tabulate==0.9.0",
+    "pyperclip==1.11.0",
+    "sqlcipher3-wheels==0.5.5.post0",
 ]
