--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyperclip==1.11.0",
     "sqlcipher3-wheels==0.5.5.post0",
     "cryptography>=46.0.3",
+    "pyinstaller>=6.16.0",
 ]
 
 [project.scripts]
