--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "uv_build"
 
 [project]
 name = "Keepr"
-version = "1.0.0.post1"
+version = "1.1.0"
 authors = [
     {name="Ben Samarji", email="bensamarji5637@gmail.com"}
 ]
