--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "uv_build"
 
 [project]
 name = "Keepr"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
     {name="Ben Samarji", email="bensamarji5637@gmail.com"}
 ]
@@ -14,6 +14,8 @@ requires-python = ">=3.13"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Developer Tools",
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
@@ -26,10 +28,14 @@ dependencies = [
     "pyinstaller>=6.16.0",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.7.0",
+    "mkdocs-git-committers-plugin-2>=2.5.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
 ]
+keywords = ["cli", "password manager", "cryptography", "developer tools", "open source", "security", "sqlcipher"]
 
 [project.urls]
-Homepage = "https://github.com/bsamarji/Keepr"
+Repository = "https://github.com/bsamarji/Keepr"
+Documentation = "https://bsamarji.github.io/Keepr/"
 Issues = "https://github.com/bsamarji/Keepr/issues"
 
 [project.scripts]
