Added mkdcos plugins to workflow file

--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: pip install mkdocs-material
 
+      - name: Install MkDocs Plugins
+        run: pip install mkdocs-git-revision-date-localized-plugin mkdocs-git-committers-plugin-2
+
       - name: Build site
         run: mkdocs build --strict
 
