--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -30,7 +30,7 @@ jobs:
         run: pip install mkdocs-git-revision-date-localized-plugin mkdocs-git-committers-plugin-2
 
       - name: Build site
-        run: mkdocs build --strict
+        run: mkdocs build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
