Changed docs workflow to only run when a change to the docs is made

--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - master
+    paths:
+      - 'docs/**'    # Trigger if files in docs/ change
+      - 'mkdocs.yml' # Also trigger if mkdocs config changes
 
 permissions:
   contents: read
